--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
 <title>Heatmap Demo - Try It Out!</title>
 <!-- HeatMap JS Library -->
-<script src="https://SunitRaut.github.io/heatmap-js/heatmap.js"></script>	
+<script src="https://SunitRaut.github.io/Heatmap-Visualization-JS/heatmap.js"></script>	
 <!-- PNGLib Library for JS. Check license on below link.-->
 <script src="https://www.xarg.org/download/pnglib.js"></script>
 <style>
