--- a/example.html
+++ b/example.html
@@ -28,8 +28,11 @@
 
 <head>
 <title>Heatmap Demo - Try It Out!</title>
-<!-- HeatMap JS Library -->
+<!-- HeatMap JS Library 
 <script src="https://SunitRaut.github.io/Heatmap-Visualization-JS/heatmap.js"></script>	
+-->
+<!-- HeatMap JS Minified Library -->
+<script src="https://SunitRaut.github.io/Heatmap-Visualization-JS/heatmap.js"></script>		
 <!-- PNGLib Library for JS. Check license on below link.-->
 <script src="https://www.xarg.org/download/pnglib.js"></script>
 <style>
